      column widths.  In this case, columns are given equal widths,
      adding up to the text width.)
    + Simple tables should now look better in most output formats.

  * Added --indented-code-classes option.  This specifies classes
    to use for indented code blocks.  (Thanks to buttock for the
	patch; resolves Issue #87.)

  * Improved performance of markdown reader by ~10% by
    eliminating the need for a separate parsing pass for notes.
    Raw notes are now stored on the first pass (which parses
    references), then parsed when the note is inserted into
    the AST. The stateNotes field in ParserState is now a
    list of [(String, String)] pairs instead of [(String, [Block])].

  * In markdown reader, treat 4 or more * or _ in a row as literal
    text.  (Trying to parse long strings of * or _ as strong or emph
	leads to exponential performance problems.)

  * Markdown reader: Use + rather than %20 for spaces in URLs.

  * Fixed htmlComment parser, adding a needed 'try'.

  * Allow . _ and ~ in header identifiers.

  * Specially mark code blocks that were "literate" in the input.
    They can then be treated differently in the writers.  This allows
    authors to distinguish bits of the literate program they are writing
    from source code examples, even if the examples are marked as
    Haskell for highlighting.  Resolves Issue #174.

  * Modified html+lhs output to use "haskell" highlighter instead
    of "literateHaskell". The highlighting module now adds bird tracks
	after highlighting (for HTML output), if the code block has the
	"literate" class.  This gives better results, because kate's
    haskell highlighter is much better than the literateHaskell
    highlighter.

  * Support for "..code-block" directive in RST reader. Not core
    RST, but used in Sphinx for code blocks annotated with syntax
    information. Thanks to Luke Plant for the patch.

  * Added "head" to list of block-level HTML tags. Resolves
    Issue #108.
